feat(security): enhance JWT configuration with external secret key and expiration time
- Move hardcoded JWT secret to application.properties
- Add configurable token expiration
- Improve token generation structure
- Update documentation for secret key generation